api call and append for the team page

--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@ layout: page
 title: Team
 subtitle: The people who make this possible
 permalink: /team/
-javascripts: [jquery-1.11.2.min.js, team.js]
+javascript: [jquery-1.11.2.min.js, team.js]
 ---
 <div class="team">
   <ul>
