--- a/events.html
+++ b/events.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: Event
+title: Events
 subtitle: Definitely not a waste of time
-permalink: /event/
+permalink: /events/
 javascript: [jquery-1.11.2.min.js, modernizr.js, events.js]
 ---
 <section id="cd-timeline" class="cd-container">
