Changed project to projects as well

--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: Project
+title: Projects
 subtitle: Do a thing
-permalink: /project/
+permalink: /projects/
 ---
 
 <div class="projects">
